src/test/contracts/negative/vars_consts/match.jsligo
type parameter =
| ["Add", int]
| ["Sub", int];

let main = ([action, store]: [parameter, int]) : int => {
  let store2 = match (action) {
    when(Add(n)): ((n) => { n = 42; return n; })(n);
    when(Sub(n)): ((n) => { n = 42; return -n; })(n);
  };
  return store2;
};
